--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.home.HomeFragment">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="m.matthew.triviaduel.ui.home.HomeViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -20,7 +26,7 @@
             android:textSize="@dimen/button_text_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Login"/>
+            tools:text="Login" />
 
         <TextView
             android:id="@+id/play_button"
@@ -29,17 +35,28 @@
             android:layout_margin="@dimen/text_margin"
             android:background="@color/colorAccent"
             android:paddingStart="@dimen/text_padding_start"
-            android:paddingEnd="@dimen/text_padding_end"
             android:paddingTop="@dimen/text_padding_top"
+            android:paddingEnd="@dimen/text_padding_end"
             android:paddingBottom="@dimen/text_padding_bottom"
+            android:text="@string/play_button_text"
             android:textColor="@color/white"
             android:textSize="@dimen/button_text_size"
-            android:text="@string/play_button_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/result_textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/play_button"
+            android:text="@{viewModel.triviaResponse.results.get(0).question}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
